[IWH-147](feat): refactor endpoint response formatting
wanted to update only one return object but have came accros multiple
dtos that had the same issue of unclear structure,

since this is the last commit of backend, I will not be seperating
these in seperate PR's

Ticket: https://iwashere.atlassian.net/browse/IWH-147
