# src/posts/dto/update-comment-response.dto.ts
@@ -1,7 +1,9 @@
 export class UpdateCommentResponseDto {
-  uuid: string;
-  body: string;
-  createdAt: Date;
-  updatedAt: Date;
-  deletedAt: Date;
+  comment: {
+    uuid: string;
+    body: string;
+    createdAt: Date;
+    updatedAt: Date;
+    deletedAt: Date;
+  };
 }
