# src/users/controllers/user.controller.ts
@@ -1,8 +1,6 @@
-import { Controller, Inject, Get, Param, Delete, HttpCode } from '@nestjs/common';
+import { Controller, Inject, Delete, HttpCode } from '@nestjs/common';
 import { User } from '../entities/user.entity';
 import { UsersDiTokens } from '../di/users-tokens.di';
-import { FindUserByUuidPort, FindUserByUuidUseCase } from '../services/usecases/find-user-by-uuid.usecase';
-import { FindUserByUuidResponseDto } from '../dto/find-user-by-uuid-response.dto';
 import { JwtAuthGuardResponse } from 'src/auth/interfaces/jwt-auth-guard-response.interface';
 import { UserData } from 'src/auth/decorators/user-data.decorator';
 import { SoftDeleteUserUsecase } from '../services/usecases/soft-delete-user.usecase';
@@ -10,26 +8,9 @@ import { SoftDeleteUserUsecase } from '../services/usecases/soft-delete-user.use
 @Controller('users')
 export class UserController {
   constructor(
-    @Inject(UsersDiTokens.FindUserByUuidService)
-    private readonly findUserByUuidService: FindUserByUuidUseCase,
     @Inject(UsersDiTokens.SoftDeleteUserService)
     private readonly softDeleteUserService: SoftDeleteUserUsecase,
   ) {}
-
-  @Get(':uuid')
-  async findByUuid(@Param('uuid') uuid: string): Promise<FindUserByUuidResponseDto> {
-    const payload: FindUserByUuidPort = { uuid };
-    const user: User = await this.findUserByUuidService.execute(payload);
-
-    return {
-      uuid: user.uuid,
-      username: user.username,
-      email: user.email,
-      createdAt: user.createdAt,
-      updatedAt: user.updatedAt,
-      deletedAt: user.deletedAt,
-    };
-  }
 
   @HttpCode(204)
   @Delete('')
