# src/users/dto/find-profile-by-uuid.response.dto.ts
@@ -1,8 +1,10 @@
 export class FindProfileByUuidResponseDto {
-  uuid: string;
-  nickname: string;
-  points: number;
-  profilePictureName: string;
+  profile: {
+    uuid: string;
+    nickname: string;
+    points: number;
+    profilePictureName: string;
+  };
   posts: {
     uuid: string;
     title: string;
